--- a/style-wear/src/index.css
+++ b/style-wear/src/index.css
@@ -1,13 +1,74 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* base styles */
+body {
+  background: linear-gradient(to bottom, #7B0D84, #64005A, #822239);
+  height: 100vh;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+* {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem 2rem;
+  border-bottom: 2px solid #FFB800;
+}
+.header .title {
+  display: flex;
+  align-items: center;
+  color: #FFB800;
+  background-image: linear-gradient(to right, #FFB800, #FFB800 50%, transparent 50%);
+  background-position: bottom;
+  background-repeat: repeat-x;
+  background-size: 100% 2px;
+}
+.contactInfo {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: bisque;
+}
+.contactInfo .streetPhone {
+  display: flex;
+  gap: 1rem;
+}
+.contactInfo .socialMedia {
+  display: flex;
+  gap: 1rem;
+}
+.contactInfo img {
+  width: 30px;
+  height: 30px;
+}
+.navbar h1 {
+  font-size: 2rem;
+  font-weight: 700;
+  color: #FFB800;
+}
+.navbar .links {
+  display: flex;
+  gap: 1rem;
+  margin-left: auto;
+}
+.navbar a {
+  font-size: 1.5rem;
+  font-weight: 750;
+  color: #FFB800;
+  text-decoration: none;
+}
+.navbar a:hover {
+  color: #555;
+}
+.content {
+  padding: 20px;
+  max-width: 600px;
+  margin: 40px auto;
+  color: bisque;
 }
