--- a/style-wear/src/index.css
+++ b/style-wear/src/index.css
@@ -2,10 +2,9 @@
 
 /* base styles */
 body {
-  background: linear-gradient(to bottom, #7B0D84, #64005A, #822239);
-  height: 100vh;
-  margin-left: 20px;
-  margin-right: 20px;
+  background: linear-gradient(to bottom, #1c1c1c, #616161, #4b4b4b);
+  /* height: 100vh; */
+
 }
 * {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -13,23 +12,34 @@ body {
   padding: 0;
   box-sizing: border-box;
 }
+.header {
+  z-index: 1;
+}
 .navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 1rem 2rem;
-  border-bottom: 2px solid #FFB800;
+  margin-left: 20px;
+  margin-right: 20px;
 }
-.header .title {
+.header .title h1 {
   display: flex;
   align-items: center;
-  color: #FFB800;
-  background-image: linear-gradient(to right, #FFB800, #FFB800 50%, transparent 50%);
+  color: #f8e8ff;
+  background-image: linear-gradient(to right, #df90ff, #FFB800 50%, transparent 50%);
   background-position: bottom;
   background-repeat: repeat-x;
   background-size: 100% 2px;
+  padding-bottom: 0.5rem;
+  margin-left: 20px;
+  margin-right: 20px;
+  font-weight: bolder;
 }
 .contactInfo {
+  margin-left: 20px;
+  margin-right: 20px;
+  padding-top: 0.5rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -50,25 +60,104 @@ body {
 .navbar h1 {
   font-size: 2rem;
   font-weight: 700;
-  color: #FFB800;
+  color: #df90ff;
 }
 .navbar .links {
   display: flex;
   gap: 1rem;
   margin-left: auto;
 }
-.navbar a {
+/* .navbar a {
   font-size: 1.5rem;
   font-weight: 750;
   color: #FFB800;
   text-decoration: none;
-}
+} */
 .navbar a:hover {
   color: #555;
 }
+.dropdown-menu {
+  color: black;
+}
+
+/* Content */
 .content {
   padding: 20px;
   max-width: 600px;
   margin: 40px auto;
   color: bisque;
+}
+
+/* Hero */
+.hero {
+  border-top: 2px solid #df90ff;
+  position: relative;
+  text-align: left;
+  color: #f8e8ff;
+  z-index: 0;
+}
+.hero video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  filter: brightness(50%);
+  z-index: 0;
+}
+.hero .heroText {
+  font-weight: bolder;
+  position: absolute;
+  bottom: 10px;
+  left: 16px;
+  z-index: 0;
+}
+
+
+/* Search Bar */
+.searchBar {
+  z-index: 1;
+}
+.searchBar input {
+  width: 150%;
+  margin-top: 7px;
+  padding: 7px;
+  font-size: 1rem;
+  border: none;
+  border-radius: 4px;
+  z-index: 1;
+}
+.search-results {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  z-index: 1;
+}
+.search-result-item {
+  display: flex;
+  align-items: center;
+  padding: 8px;
+  background-color: #f0f0f0;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  cursor: pointer;
+  z-index: 1;
+}
+.search-result-item:hover {
+  background-color: #dcdcdc;
+  z-index: 1;
+}
+.search-result-item:active {
+  background-color: #a9a9a9;
+  z-index: 1;
+}
+.result-image {
+  width: 30px;
+  height: 30px;
+  object-fit: cover;
+  margin-right: 8px;
+  z-index: 1;
+}
+.result-text {
+  flex: 1;
+  color: black;
+  z-index: 1;
 }
