--- a/style-wear/src/index.css
+++ b/style-wear/src/index.css
@@ -4,7 +4,6 @@
 body {
   background: linear-gradient(to bottom, #1c1c1c, #616161, #4b4b4b);
   /* height: 100vh; */
-
 }
 * {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -84,7 +83,7 @@ body {
 .content {
   padding: 20px;
   max-width: 600px;
-  margin: 40px auto;
+  margin: auto;
   color: bisque;
 }
 
@@ -101,15 +100,44 @@ body {
   height: 100%;
   object-fit: cover;
   filter: brightness(50%);
+  background-image: linear-gradient(
+      rgba(10,10,10, 0.7),
+      rgba(10,10,10, 0.4));
+  background-image:(rgba(10,10,10, 1));
   z-index: 0;
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+@media (min-aspect-ratio: 16/9){
+  .hero video{
+      width: 100%;
+      height: auto;
+  }
+}
+
+@media (max-aspect-ratio: 16/9){
+  .hero video{
+      width: auto;
+      height: 100%;
+  }
 }
 .hero .heroText {
+  text-align: center;
   font-weight: bolder;
   position: absolute;
-  bottom: 10px;
-  left: 16px;
+  bottom: 50%;
+  left: 50%;
+  transform: translate(-50%, 50%);
   z-index: 0;
 }
+/* for left bottom text */
+/* font-weight: bolder;
+position: absolute;
+bottom: 10px;
+left: 16px;
+z-index: 0; */
 
 
 /* Search Bar */
@@ -160,4 +188,46 @@ body {
   flex: 1;
   color: black;
   z-index: 1;
+}
+
+/* carousel of examples */
+.subheader {
+  color: bisque;
+  text-align: center;
+  font-weight: 700;
+}
+.exampleShirtCarousel {
+  display: flex;
+  gap: 1rem;
+  overflow-x: auto;
+  padding: 1rem;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+.exampleShirtCarousel p, .exampleShirtCarousel h3{
+  color: black;
+  font-weight: 1000;
+}
+
+/* footer */
+footer {
+  background: #333;
+  color: #fff;
+  text-align: center;
+  padding: 0.5rem;
+  bottom: 0;
+  width: 100%;
+}
+.foot {
+  margin-left: 20px;
+  margin-right: 20px;
+  padding-top: 0.5rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: bisque;
+}
+.footerContactInfo {
+  display: flex;
+  gap: 1rem;
 }
