--- a/style-wear/src/index.css
+++ b/style-wear/src/index.css
@@ -209,6 +209,16 @@ z-index: 0; */
   font-weight: 1000;
 }
 
+/* email form */
+.emailForm {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 1rem;
+  margin: 0 auto; /* center horizontally */
+  align-items: center; /* center vertically */
+}
+
 /* footer */
 footer {
   background: #333;
