--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
 body {
   background: linear-gradient(to bottom, #1c1c1c, #616161, #4b4b4b);
   /* height: 100vh; */
+  overflow-x: hidden;
 }
 * {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
