--- a/src/index.css
+++ b/src/index.css
@@ -1,19 +1,26 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
 
+/* Constants */
+:root {
+  --primary-color: #df90ff;
+  --secondary-color: #f8e8ff;
+  --dark-color: #1c1c1c;
+  --light-color: #f8f8f8;
+  --danger-color: #ff0000;
+}
+
 /* base styles */
 body {
   background: linear-gradient(to bottom, #1c1c1c, #616161, #4b4b4b);
   /* height: 100vh; */
   overflow-x: hidden;
+  min-height: 100vh;
 }
 * {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-}
-.header {
-  z-index: 1;
 }
 .navbar {
   display: flex;
@@ -23,18 +30,30 @@ body {
   margin-left: 20px;
   margin-right: 20px;
 }
-.header .title h1 {
+.title h1 {
   display: flex;
   align-items: center;
   color: #f8e8ff;
-  background-image: linear-gradient(to right, #df90ff, #FFB800 50%, transparent 50%);
-  background-position: bottom;
-  background-repeat: repeat-x;
-  background-size: 100% 2px;
-  padding-bottom: 0.5rem;
+  padding-bottom:5px;
+  font-size: 2rem;
+  font-weight: 700;
+  background: /* gradient can be an image */
+    linear-gradient(
+      to left,
+      rgba(92,7,52,1) 0%,
+      rgba(134,29,84,1) 12%,
+      rgba(255,93,177,1) 47%,
+      rgba(83,0,30,1) 100%
+    )
+    left
+    bottom
+    no-repeat;
+  background-size:100% 1px ;/* if linear-gradient, we need to resize it */
+  /* border-bottom: #df90ff 2px solid; */
+  /* padding-bottom: 0.5rem;
   margin-left: 20px;
-  margin-right: 20px;
-  font-weight: bolder;
+  margin-right: 20px; */
+  /* font-weight: bolder; */
 }
 .contactInfo {
   margin-left: 20px;
@@ -57,40 +76,41 @@ body {
   width: 30px;
   height: 30px;
 }
-.navbar h1 {
-  font-size: 2rem;
-  font-weight: 700;
-  color: #df90ff;
-}
 .navbar .links {
   display: flex;
   gap: 1rem;
   margin-left: auto;
 }
-/* .navbar a {
+.navbar a {
   font-size: 1.5rem;
-  font-weight: 750;
-  color: #FFB800;
+  font-weight: 600;
+  /* color: #6d3f6f; */
   text-decoration: none;
-} */
+}
 .navbar a:hover {
-  color: #555;
+  color: #a81f58;
 }
 .dropdown-menu {
   color: black;
 }
 
 /* Content */
-.content {
-  padding: 20px;
-  max-width: 600px;
-  margin: auto;
-  color: bisque;
-}
 
 /* Hero */
 .hero {
-  border-top: 2px solid #df90ff;
+  border-top: #df90ff 2px solid;
+  background: /* gradient can be an image */
+  linear-gradient(
+    to left,
+    rgba(92,7,52,1) 0%,
+    rgba(134,29,84,1) 12%,
+    rgba(255,93,177,1) 47%,
+    rgba(83,0,30,1) 100%
+  )
+  left
+  bottom
+  no-repeat;
+  background-size:100% 10px ;/* if linear-gradient, we need to resize it */
   position: relative;
   text-align: left;
   color: #f8e8ff;
@@ -146,8 +166,8 @@ z-index: 0; */
   z-index: 1;
 }
 .searchBar input {
-  width: 150%;
-  margin-top: 7px;
+  /* width: 150%; */
+  /* margin-top: 7px; */
   padding: 7px;
   font-size: 1rem;
   border: none;
@@ -204,14 +224,28 @@ z-index: 0; */
   padding: 1rem;
   margin-left: 20px;
   margin-right: 20px;
+  padding: 20px;
+  max-width: 600px;
+  margin: auto;
 }
 .exampleShirtCarousel p, .exampleShirtCarousel h3{
   color: black;
   font-weight: 1000;
 }
 
+.aboutUs {
+  padding: 20px;
+  max-width: 600px;
+  margin: auto;
+  color: bisque;
+}
+
 /* email form */
 .emailForm {
+  padding: 20px;
+  max-width: 600px;
+  margin: auto;
+  color: bisque;
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -221,13 +255,17 @@ z-index: 0; */
 }
 
 /* footer */
+.ContactUs, .shop, .faq {
+  height: 100vh;
+}
+
 footer {
   background: #333;
   color: #fff;
   text-align: center;
   padding: 0.5rem;
-  bottom: 0;
   width: 100%;
+  height: max-content;
 }
 .foot {
   margin-left: 20px;
@@ -235,10 +273,13 @@ footer {
   padding-top: 0.5rem;
   display: flex;
   justify-content: space-between;
-  align-items: center;
   color: bisque;
 }
 .footerContactInfo {
   display: flex;
   gap: 1rem;
+}
+.foot img {
+  width: 30px;
+  height: 30px;
 }
