--- a/src/styles/AboutUs.css
+++ b/src/styles/AboutUs.css
@@ -1,6 +1,27 @@
 .aboutUs {
     padding: 20px;
-    max-width: 600px;
-    margin: auto;
     color: bisque;
-  }
+    margin-left: 25vw;
+    margin-right: 25vw;
+}
+@media screen and (max-width: 1980px) {
+    .aboutUs {
+      margin-left: 10vw;
+      margin-right: 10vw;
+    }
+}
+
+.divider {
+    background: /* gradient can be an image */
+    linear-gradient(
+      to left,
+      rgba(92,7,52,1) 0%,
+      rgba(134,29,84,1) 12%,
+      rgba(255,93,177,1) 47%,
+      rgba(83,0,30,1) 100%
+    )
+    left
+    bottom
+    no-repeat;
+    background-size:100% 4px ;/* if linear-gradient, we need to resize it */
+}
