--- a/src/styles/EmailForm.css
+++ b/src/styles/EmailForm.css
@@ -1,13 +1,26 @@
 /* email form */
 .emailForm {
   padding: 20px;
-  max-width: 600px;
+  max-width: fit-content;
   margin: auto;
   color: bisque;
   display: flex;
   flex-direction: column;
   gap: 1rem;
   padding: 1rem;
-  margin: 0 auto; /* center horizontally */
-  align-items: center; /* center vertically */
+  /* align-items: center; center vertically */
+}
+.emailForm input {
+  padding: 0.5rem;
+  border-radius: 5px;
+  border: none;
+  width: 100%;
+  margin: 0.5rem 0;
+}
+.emailForm textarea {
+  padding: 0.5rem;
+  border-radius: 5px;
+  border: none;
+  width: 100%;
+  margin: 0.5rem 0;
 }
