--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -1,10 +1,18 @@
+
 .navbar {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 1rem 2rem;
-    margin-left: 20px;
-    margin-right: 20px;
+    margin-left: 25vw;
+    margin-right: 25vw;
+}
+@media screen and (max-width: 1980px) {
+    .navbar {
+      margin-left: 10vw;
+      margin-right: 10vw;
+    }
+
 }
 .title h1 {
     display: flex;
