--- a/src/styles/Cart.css
+++ b/src/styles/Cart.css
@@ -1,6 +1,6 @@
 .cart {
-  border: 2px solid #ff0000;
-  border-radius: 20px;
+  /* border: 2px solid #ff0000;
+  border-radius: 20px; */
   min-height: 100vh;
   color: #ccc;
   margin: auto;
@@ -21,12 +21,12 @@
 
 
 .cart-details {
-  border: 2px solid #ff0000;
+  /* border: 2px solid #ff0000; */
   display: flex;
 }
 .financial {
-  border: 2px solid #ff00d4;
-  border-radius: 20px;
+  /* border: 2px solid #ff00d4;
+  border-radius: 20px; */
   flex: 1;
   padding: 20px;
   min-width: fit-content;
@@ -35,14 +35,14 @@
 }
 
 .products-in-cart {
-  border-radius: 20px;
-  border: 3px solid #00ff04;
+  /* border-radius: 20px;
+  border: 3px solid #00ff04; */
   width: 100%;
 }
 
 .product-info {
-  border-radius: 20px;
-  border: 1px solid #00fffb;
+  /* border-radius: 20px;
+  border: 1px solid #00fffb; */
   padding: 10px;
   flex: 3;
   display: grid;
@@ -53,7 +53,7 @@
 }
 
 .quantity {
-  border: 1px solid #00ff04;
+  /* border: 1px solid #00ff04; */
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -62,7 +62,7 @@
 
 }
 .quantity button {
-  border: 1px solid #00ff04;
+  /* border: 1px solid #00ff04; */
   background-color: #d6a3f4;
   border-radius: 20%;
   padding: 5px;
@@ -73,7 +73,7 @@
 }
 
 .quantity p {
-  border: 1px solid #00ff04;
+  /* border: 1px solid #00ff04; */
   font-size: 1.5rem;
   font-weight: bold;
   align-items: center;
