--- a/src/styles/Shop.css
+++ b/src/styles/Shop.css
@@ -13,11 +13,13 @@
   background-color: #cfafcb;
   flex: 1;
   padding: 20px;
-  border: 1px solid #cfafcb;
+  border: 1px solid #000000;
   min-width: fit-content;
   max-width: max-content;
   font-weight: bold;
   border-radius: 20px;
+  box-shadow: 7px 7px 10px #000000;
+  margin-bottom: 10px;
 }
 .facet-filter label{
   padding-left: 10px;
@@ -52,11 +54,12 @@
 
 
 .product-item {
-  border: 1px solid #ddd;
+  border: 1px solid #000000;
   margin-bottom: 10px;
   padding: 10px;
   background-color: #ffffff;
   border-radius: 20px;
+  box-shadow: 7px 7px 10px #000000;
 }
 
 .product-image {
