--- a/src/styles/EmailForm.css
+++ b/src/styles/EmailForm.css
@@ -24,3 +24,11 @@
   width: 100%;
   margin: 0.5rem 0;
 }
+.submitButton {
+  padding: 0.5rem;
+  border-radius: 5px;
+  border: none;
+  background-color: #b43c94;
+  color: white;
+  cursor: pointer;
+}
